# euler

datas/: config.inf
src/: CMakeLists.txt
src/client/: CMakeLists.txt  client.cpp
src/engine/: CMakeLists.txt  engine.cpp  engine.hpp
src/res_mgr/: res_mgr.hpp
src/utils/: CMakeLists.txt  singleton.hpp  thread.hpp  thread_mgr.cpp  thread_mgr.hpp
tools/: cmake.sh  make.sh  run.sh
